# web_scraper

./: Cargo.toml
src/: error.rs  lib.rs
src/scrapers/: html_scraper.rs  json_scraper.rs  mod.rs
