[package]
name = "web_scraper"
version = "0.3.0"
edition = "2021"
publish = ["git"]
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
